add unique validation to project name

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "react": "^16.11.0",
     "react-addons-css-transition-group": "^15.6.2",
     "react-dom": "^16.11.0",
+    "react-fade": "^1.1.1",
+    "react-fade-in": "^0.1.6",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.4",
